refactor: 채팅방에서 상대방 프로필 이미지 처리 방법 변경 (#207)
* refactor: Message, MessageDto 에서 profileImageUrl 필드 제거

* refactor: RoomDto에 상대방 프로필 사진 URL 필드 추가

* refactor: RoomListDto를 record로 변경하여 불변성 보장