@@ -1,30 +1,26 @@
 package com.ll.goohaeyou.chat.room.application.dto;
 
 import com.ll.goohaeyou.chat.room.domain.entity.Room;
-import lombok.Builder;
-import lombok.Getter;
 
 import java.time.format.DateTimeFormatter;
 import java.util.List;
 
-@Getter
-@Builder
-public class RoomListDto {
-    private Long roomId;
-    private String username1;
-    private String username2;
-    private String lastChat;
-    private String lastChatDate;
-
+public record RoomListDto(
+        Long roomId,
+        String username1,
+        String username2,
+        String lastChat,
+        String lastChatDate
+) {
     public static RoomListDto from(Room room) {
         DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy.MM.dd HH:mm");
-        return RoomListDto.builder()
-                .roomId(room.getId())
-                .username1(room.getUsername1())
-                .username2(room.getUsername2())
-                .lastChat(room.getMessages().isEmpty() ? "메세지가 아직 없습니다." : room.getMessages().getLast().getContent())
-                .lastChatDate(room.getMessages().isEmpty() ? "" : room.getMessages().getLast().getCreatedAt().format(formatter))
-                .build();
+        return new RoomListDto(
+                room.getId(),
+                room.getUsername1(),
+                room.getUsername2(),
+                room.getMessages().isEmpty() ? "메세지가 아직 없습니다." : room.getMessages().get(room.getMessages().size() - 1).getContent(),
+                room.getMessages().isEmpty() ? "" : room.getMessages().get(room.getMessages().size() - 1).getCreatedAt().format(formatter)
+        );
     }
 
     public static List<RoomListDto> convertToDtoList(List<Room> rooms) {
